--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "express-rate-limit": "^7.2.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "jpeg-js": "^0.4.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
     "morgan": "^1.10.0",
@@ -45,6 +46,7 @@
     "node-geocoder": "^4.4.1",
     "nodemailer": "^7.0.12",
     "openai": "^6.25.0",
+    "pngjs": "^7.0.0",
     "qrcode": "^1.5.4",
     "socket.io": "^4.7.5",
     "swagger-jsdoc": "^6.2.8",
