Remove unnecessary services and Docker files
- Removed CLIP Vision Model service (clipService.js)
- Removed web scraping services (scraperService.js, ideaScraper.js, scraperJobs.js)
- Removed ScrapedIdea model and Celery worker files
- Removed Gemini Vision API integration (geminiVisionService.js)
- Removed OpenAI API integration
- Removed imageClassifierService.js and contentModerationService.js
- Removed celeryClient.js and Redis dependencies
- Removed Docker configuration (docker-compose.yml, Dockerfile, start-dev scripts)
- Cleaned up environment files removing API keys for removed services
- Removed chatbot controller (Gemini-based)

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,11 +21,9 @@
   "license": "MIT",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "@tensorflow-models/coco-ssd": "^2.2.3",
-    "@tensorflow-models/mobilenet": "^2.1.1",
-    "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "cheerio": "^1.0.0-rc.12",
     "cloudinary": "^1.41.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.7",
@@ -36,7 +34,6 @@
     "express-rate-limit": "^7.2.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "jpeg-js": "^0.4.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
     "morgan": "^1.10.0",
@@ -45,9 +42,9 @@
     "node-cron": "^4.2.1",
     "node-geocoder": "^4.4.1",
     "nodemailer": "^7.0.12",
-    "openai": "^6.25.0",
-    "pngjs": "^7.0.0",
     "qrcode": "^1.5.4",
+    "redis": "^4.6.11",
+    "sharp": "^0.34.5",
     "socket.io": "^4.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
